--- a/charts/web-app/values.yaml
+++ b/charts/web-app/values.yaml
@@ -62,11 +62,9 @@ service:
 # This block is for setting up the ingress for more information can be found here: https://kubernetes.io/docs/concepts/services-networking/ingress/
 ingress:
   enabled: true
-  className: ""
+  className: "nginx"
   annotations:
-    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
-    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: k8s-poc.dev.local
       paths:
